@@ -22,12 +22,14 @@ title= _ "Traits"
 topics=traits,traits_intelligent,traits_resilient,traits_strong,traits_quick,traits_dextrous,traits_undead,traits_loyal
 # Not used since generated text was not really suitable.
 #generator=traits
+sort_topics=yes
 [/section]
 
 [section]
 id=units
 title= _ "Units"
 generator=units
+sort_topics=yes
 [/section]
 
 [section]
@@ -35,18 +37,21 @@ id=abilities_section
 title= _ "Abilities"
 topics=abilities
 generator=abilities
+sort_topics=yes
 [/section]
 
 [section]
 id=weapon_specials
 title= _ "Weapon Specials"
-generator=weapon_specials		
+generator=weapon_specials
+sort_topics=yes		
 [/section]
 
 [section]
 id=terrains
 title= _ "Terrains"
 topics=terrain_castle,terrain_village,terrain_deep_water,terrain_shallow_water,terrain_swamp_water,terrain_ford,terrain_bridge,terrain_sand,terrain_desert,terrain_savanna,terrain_grassland,terrain_road,terrain_forest,terrain_canyon,terrain_cave,terrain_cavewall,terrain_rockbound_cave, terrain_fungus,terrain_lava,terrain_hills,terrain_mountains,terrain_tundra,terrain_ice
+sort_topics=yes
 [/section]
 
 [topic]
