@@ -111,6 +111,7 @@ SVN trunk (1.1.1+svn):
    characters
    * force a refresh after calls to ONSCREEN scrolls, to avoid refresh
    problems.
+   * add sort_topics command to the WML of help
 
 Version 1.1.1:
  * campaigns
